# Hector

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CREATE_ISSUES_README.md  LICENSE  Playbook.md  README.md  Readme.md  SECURITY.md  Tickets.md  agents.md  alembic.ini  create_all_github_issues.py  create_all_issues.sh  create_github_issues.sh  hector-presentation.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Frontend-Technology-Decision.md  OPTIMIZATIONS.md  architecture.md  phase-2-authentication.md
frontend/: .env.example  ADMIN_CREDENTIALS.md  DESIGN_BRIEF.md  TICKETS-VIEW-AS-AND-LANDING.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/config/: api.ts
frontend/src/contexts/: AuthContext.tsx  ViewAsContext.tsx
frontend/src/services/: apiClient.ts  authService.ts  dogService.ts  donationRequestService.ts
frontend/src/types/: auth.ts  dog.ts  donationRequest.ts
migrations/: env.py
migrations/versions/: b641ac919ab9_initial_schema_with_users_clinics_dogs_.py
scripts/: README.md  create_github_issues.py  create_labels.sh  setup_db.py
src/hector/: __init__.py  app.py  config.py  database.py  logging_config.py  main.py  middleware.py
src/hector/auth/: __init__.py  dependencies.py  jwt.py  password.py
tests/: conftest.py  test_auth_authorization.py  test_auth_endpoints.py  test_auth_jwt.py  test_auth_password.py  test_clinic_endpoints.py  test_config.py  test_database.py  test_dog_endpoints.py  test_health.py  test_models.py  test_requests.py
(+47 files in other folders)
