[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hector"
version = "0.1.0"
description = "FastAPI service skeleton for the Hector project"
readme = "Readme.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [ { name = "Half Baked Fully Nuts" } ]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.9,<2",
  "pytest>=8.1,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.4,<1",
]

[project.scripts]
hector = "hector.main:main"

[tool.uv]
default-groups = ["dev"]

[tool.uv.scripts]
lint = "ruff check ."
format = "ruff format ."
"format:check" = "ruff format --check ."
typecheck = "mypy src"
test = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
strict_equality = true
plugins = []
